<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tacanalytics.AnalyticsMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_customevent_args_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackEvent"
            android:text="统计事件（无参数）" />

        <Button
            android:id="@+id/btn_customevent_kv_count"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackEventWithArgs"
            android:text="统计事件（有参数）" />

        <Button
            android:id="@+id/btn_duration_event"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackDurationEvent"
            android:text="统计时长事件" />

        <Button
            android:id="@+id/btn_customevent_kv_duration_begin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackDurationEventBegin"
            android:text="开始统计时长事件" />

        <Button
            android:id="@+id/btn_customevent_kv_duration_end"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackDurationEventEnd"
            android:text="结束统计时长事件" />

        <Button
            android:id="@+id/btn_track_page"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="trackPage"
            android:text="自定义统计页面" />

        <Button
            android:id="@+id/custom_properties"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="reportCustomProperty"
            android:text="用户自定义属性" />

        <Button
            android:id="@+id/btn_new_session"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="newSession"
            android:text="开启新会话" />

        <Button
            android:id="@+id/track_webview_event"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="startWebView"
            android:text="统计 HTML 事件" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="1.2dp"
            android:text="@string/check_data_on_console"
            android:autoLink="web"
            android:textSize="16sp"/>


        <!--<Button-->
        <!--android:id="@+id/btn_monitor_events"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:onClick="trackNetworkMetrics"-->
        <!--android:text="云监控" />-->

        <!--<Button-->
        <!--android:id="@+id/btn_get_property"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:onClick="getProperty"-->
        <!--android:text="获取在线参数" />-->

    </LinearLayout>

</ScrollView>